# mlops_assignment

./: .gitignore  pyproject.toml  requirements.txt
data/processed/: clean_used_car_prices.csv.dvc
data/wheatseeds/: 03_Wheat_Seeds.csv.dvc
models/: catboost_used_car_model.pkl  wheat_seeds_pipeline.pkl
src/: app.py  modelling_wheat.py
src/config/: pycaret_setup_config.json
src/pages/: wheat_seeds.py
