[project]
name = "mlops-integrated"
version = "0.1.0"
description = ""
authors = [
    {name = "alex-billybob",email = "alex.yishun@gmail.com"}
]
readme = "README.md"
requires-python = "3.10.18"
dependencies = [
    "pycaret[full] (==3.3.2)",
    "mlflow (==3.3.2)",
    "catboost (==1.2.2)",
    "openpyxl (==3.1.5)",
    "omegaconf (==2.4.1)",
    "streamlit (==1.49.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
